--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "console": "^0.7.2",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
